[FIXED] white spaces [FIXED] examples: CellAgent using code group to display codes

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -162,3 +162,7 @@ div#app div.VPHome div.VPHero div.container div.main p.text {
 .v-container .custom-block {
   padding-top: 8px;
 }
+
+.custom-block.tip {
+  background-color: #81C784;
+}
